--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,22 @@
-//
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+}
+
+header {
+    background-color: rgb(44, 44, 44);
+    height: 120px;
+    line-height: 120px;
+    img {
+        height: 80px;
+        margin-left: 100px;
+        vertical-align: middle;
+    }
+}
+
+main {
+    width: 80%;
+    margin: auto;
+}
