--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5,20 +5,29 @@
   font-family: "Lato", sans-serif;
 }
 
-header {
-  background-color: #2c2c2c;
+body {
+  background-color: #252525;
+}
+
+body .container header {
+  background-color: #1a1a1a;
   height: 120px;
   line-height: 120px;
 }
 
-header img {
+body .container header img {
   height: 80px;
   margin-left: 100px;
   vertical-align: middle;
 }
 
-main {
+body .container main {
   width: 80%;
   margin: auto;
+}
+
+body .container main .cd-container {
+  display: flex;
+  flex-direction: column;
 }
 
