--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,18 +5,27 @@
     font-family: 'Lato', sans-serif;
 }
 
-header {
-    background-color: rgb(44, 44, 44);
-    height: 120px;
-    line-height: 120px;
-    img {
-        height: 80px;
-        margin-left: 100px;
-        vertical-align: middle;
+body {
+    background-color: rgb(37, 37, 37);
+    .container {
+        header {
+            background-color: rgb(26, 26, 26);
+            height: 120px;
+            line-height: 120px;
+            img {
+                height: 80px;
+                margin-left: 100px;
+                vertical-align: middle;
+            }
+        }
+        
+        main {
+            width: 80%;
+            margin: auto;
+            .cd-container {
+                display: flex;
+                flex-direction: column;
+            }
+        }
     }
-}
-
-main {
-    width: 80%;
-    margin: auto;
 }
